name:                ghcjs-perch-canvas
version:             0.0.2
synopsis:            Perch-like canvas monad.
-- description:
license:             MIT
license-file:        LICENSE
author:              Arthur S. Fayzrakhmanov
maintainer:          heraldhoi@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     GHCJS.Perch.Canvas
  other-modules:       Internal.API
                       Internal.FFI
                       Internal.Type
  -- other-extensions:
  build-depends:         base         >=4.7     && <4.9
                       , ghcjs-base
                       , ghcjs-perch  >=0.1.0.1
                       , text
                       , transformers
  default-extensions:  OverloadedStrings

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind -O
